Implemented the design and basic functionality. The transition from starting screen to question 1 works. At the moment the correct anwer is always at position 1, randomizer remains to be implemented.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <title>Quiz | Data structures & Algorithms</title>
     <link rel="stylesheet" type='text/css' href='style.css'>
+    <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p|Overpass" rel="stylesheet">
   </head>
   <body class='centered-wrapper'>
     <main class='centered-content'>
-      <div class='start-screen'>
+      <div class='start-screen' >
         <h1>Quiz</h1>
         <h2>Data structures and Algorithms</h2>
-        <button>Start!</button>
+        <button class='js-start-button'>Start!</button>
       </div>
     </main>
 
